--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "file-saver": "^2.0.5",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
