--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
