--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
+    "@mui/x-data-grid": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "file-saver": "^2.0.5",
