--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "file-saver": "^2.0.5",
+    "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
