--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.3.21",
     "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.539.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
